evaluation/capybarakv_interface/src/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_transaction_options_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_optimistictransactiondb_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_optimistictransaction_options_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_transaction_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_checkpoint_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_wal_iterator_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_wal_readoptions_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_memory_consumers_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocksdb_memory_usage_t {
    _unused: [u8; 0],
}
extern "C" {
    pub fn rocksdb_open(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_t;
}
extern "C" {
    pub fn rocksdb_open_with_ttl(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        ttl: ::std::os::raw::c_int,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_t;
}
extern "C" {
    pub fn rocksdb_open_for_read_only(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        error_if_log_file_exist: ::std::os::raw::c_uchar,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_t;
}
extern "C" {
    pub fn rocksdb_open_as_secondary(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        secondary_path: *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_t;
}
extern "C" {
    pub fn rocksdb_backup_engine_open(
        options: *const rocksdb_options_t,
        path: *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_backup_engine_t;
}
extern "C" {
    pub fn rocksdb_backup_engine_create_new_backup(
        be: *mut rocksdb_backup_engine_t,
        db: *mut rocksdb_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_backup_engine_create_new_backup_flush(
        be: *mut rocksdb_backup_engine_t,
        db: *mut rocksdb_t,
        flush_before_backup: ::std::os::raw::c_uchar,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_backup_engine_purge_old_backups(
        be: *mut rocksdb_backup_engine_t,
        num_backups_to_keep: u32,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_restore_options_create() -> *mut rocksdb_restore_options_t;
}
extern "C" {
    pub fn rocksdb_restore_options_destroy(opt: *mut rocksdb_restore_options_t);
}
extern "C" {
    pub fn rocksdb_restore_options_set_keep_log_files(
        opt: *mut rocksdb_restore_options_t,
        v: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_backup_engine_verify_backup(
        be: *mut rocksdb_backup_engine_t,
        backup_id: u32,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_backup_engine_restore_db_from_latest_backup(
        be: *mut rocksdb_backup_engine_t,
        db_dir: *const ::std::os::raw::c_char,
        wal_dir: *const ::std::os::raw::c_char,
        restore_options: *const rocksdb_restore_options_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_backup_engine_get_backup_info(
        be: *mut rocksdb_backup_engine_t,
    ) -> *const rocksdb_backup_engine_info_t;
}
extern "C" {
    pub fn rocksdb_backup_engine_info_count(
        info: *const rocksdb_backup_engine_info_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_backup_engine_info_timestamp(
        info: *const rocksdb_backup_engine_info_t,
        index: ::std::os::raw::c_int,
    ) -> i64;
}
extern "C" {
    pub fn rocksdb_backup_engine_info_backup_id(
        info: *const rocksdb_backup_engine_info_t,
        index: ::std::os::raw::c_int,
    ) -> u32;
}
extern "C" {
    pub fn rocksdb_backup_engine_info_size(
        info: *const rocksdb_backup_engine_info_t,
        index: ::std::os::raw::c_int,
    ) -> u64;
}
extern "C" {
    pub fn rocksdb_backup_engine_info_number_files(
        info: *const rocksdb_backup_engine_info_t,
        index: ::std::os::raw::c_int,
    ) -> u32;
}
extern "C" {
    pub fn rocksdb_backup_engine_info_destroy(info: *const rocksdb_backup_engine_info_t);
}
extern "C" {
    pub fn rocksdb_backup_engine_close(be: *mut rocksdb_backup_engine_t);
}
extern "C" {
    pub fn rocksdb_checkpoint_object_create(
        db: *mut rocksdb_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_checkpoint_t;
}
extern "C" {
    pub fn rocksdb_checkpoint_create(
        checkpoint: *mut rocksdb_checkpoint_t,
        checkpoint_dir: *const ::std::os::raw::c_char,
        log_size_for_flush: u64,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_checkpoint_object_destroy(checkpoint: *mut rocksdb_checkpoint_t);
}
extern "C" {
    pub fn rocksdb_open_column_families(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        num_column_families: ::std::os::raw::c_int,
        column_family_names: *const *const ::std::os::raw::c_char,
        column_family_options: *const *const rocksdb_options_t,
        column_family_handles: *mut *mut rocksdb_column_family_handle_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_t;
}
extern "C" {
    pub fn rocksdb_open_for_read_only_column_families(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        num_column_families: ::std::os::raw::c_int,
        column_family_names: *const *const ::std::os::raw::c_char,
        column_family_options: *const *const rocksdb_options_t,
        column_family_handles: *mut *mut rocksdb_column_family_handle_t,
        error_if_log_file_exist: ::std::os::raw::c_uchar,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_t;
}
extern "C" {
    pub fn rocksdb_open_as_secondary_column_families(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        secondary_path: *const ::std::os::raw::c_char,
        num_column_families: ::std::os::raw::c_int,
        column_family_names: *const *const ::std::os::raw::c_char,
        column_family_options: *const *const rocksdb_options_t,
        colummn_family_handles: *mut *mut rocksdb_column_family_handle_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_t;
}
extern "C" {
    pub fn rocksdb_list_column_families(
        options: *const rocksdb_options_t,
        name: *const ::std::os::raw::c_char,
        lencf: *mut usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_list_column_families_destroy(list: *mut *mut ::std::os::raw::c_char, len: usize);
}
extern "C" {
    pub fn rocksdb_create_column_family(
        db: *mut rocksdb_t,
        column_family_options: *const rocksdb_options_t,
        column_family_name: *const ::std::os::raw::c_char,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut rocksdb_column_family_handle_t;
}
extern "C" {
    pub fn rocksdb_drop_column_family(
        db: *mut rocksdb_t,
        handle: *mut rocksdb_column_family_handle_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_column_family_handle_destroy(arg1: *mut rocksdb_column_family_handle_t);
}
extern "C" {
    pub fn rocksdb_close(db: *mut rocksdb_t);
}
extern "C" {
    pub fn rocksdb_put(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        val: *const ::std::os::raw::c_char,
        vallen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_put_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        val: *const ::std::os::raw::c_char,
        vallen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_delete(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_delete_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_delete_range_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
        start_key: *const ::std::os::raw::c_char,
        start_key_len: usize,
        end_key: *const ::std::os::raw::c_char,
        end_key_len: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_merge(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        val: *const ::std::os::raw::c_char,
        vallen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_merge_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        val: *const ::std::os::raw::c_char,
        vallen: usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_write(
        db: *mut rocksdb_t,
        options: *const rocksdb_writeoptions_t,
        batch: *mut rocksdb_writebatch_t,
        errptr: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_get(
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_get_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
        column_family: *mut rocksdb_column_family_handle_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
        vallen: *mut usize,
        errptr: *mut *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_multi_get(
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
        num_keys: usize,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        values_list: *mut *mut ::std::os::raw::c_char,
        values_list_sizes: *mut usize,
        errs: *mut *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_multi_get_cf(
        db: *mut rocksdb_t,
        options: *const rocksdb_readoptions_t,
        column_families: *const *const rocksdb_column_family_handle_t,
        num_keys: usize,
        keys_list: *const *const ::std::os::raw::c_char,
        keys_list_sizes: *const usize,
        values_list: *mut *mut ::std::os::raw::c_char,
        values_list_sizes: *mut usize,
        errs: *mut *mut ::std::os::raw::c_char,
    );
}
